@@ -15,9 +15,9 @@ import java.util.*;
  * @author abdelrahman
  */
 public class AGScheduling extends Scheduling {
-    Queue<Process> readyQueue = new LinkedList<>();
-    List<Process> processesAG = new LinkedList<>();
-    List<Process> deadList = new LinkedList<>();
+    Queue<Process> readyQueue;
+    List<Process> processesAG;
+    List<Process> deadList;
     boolean isInterrupted = false;
     private final int numberOfProcesses;
     private Process currentProcess;
@@ -27,6 +27,9 @@ public class AGScheduling extends Scheduling {
         this.numberOfProcesses = processes.size();
         this.doneProcesses = 0;
         this.currentTime = 0;
+        this.processesAG = new LinkedList<>();
+        this.readyQueue = new LinkedList<>();
+        this.deadList = new LinkedList<>();
         this.processesAG.sort(Comparator.comparingDouble(Process::getAGFactor));
     }
     private double GetMean(List<Process> processes) {
@@ -39,33 +42,43 @@ public class AGScheduling extends Scheduling {
     @Override
     public List<Process> execute() {
         if(!processes.isEmpty() && readyQueue.isEmpty()) {
-            this.currentTime = this.processes.getFirst().getArrivalTime();
+                this.currentTime = this.processes.get(0).getArrivalTime();
         }
-
         while(doneProcesses != numberOfProcesses){
+            // remake the ready queue
+            for (Process process : processes) {
+                System.out.println(process);
+            }
             remakeReadyQueue();
-            if(isInterrupted){
-                currentProcess = processesAG.getFirst();
-                readyQueue.remove(currentProcess);
-                isInterrupted = false;
-            }else{
-                currentProcess = readyQueue.poll();
-                processesAG.remove(currentProcess);
-            }
-            currentProcess.setWaitingTime(currentProcess.getWaitingTime() +  currentTime - currentProcess.getLastWaitTime());
-            if(nonPreemptive(currentProcess)){
-                doneProcesses++;
-            }else{
-                remakeReadyQueue();
 
-            }
+            break;
+//            doneProcesses++;
+//            if(isInterrupted){
+//                currentProcess = processesAG.get(0);
+//                readyQueue.remove(currentProcess);
+//                isInterrupted = false;
+//            }else{
+//                currentProcess = readyQueue.poll();
+//                processesAG.remove(currentProcess);
+//            }
+//            currentProcess.setWaitingTime(currentProcess.getWaitingTime() +  currentTime - currentProcess.getLastWaitTime());
+//            if(nonPreemptive(currentProcess)){
+//                doneProcesses++;
+//            }else{
+//                remakeReadyQueue();
+//                if(preemtive(currentProcess)){
+//                    doneProcesses++;
+//                }
+//            }
         }
         return null;
     }
-
+    private boolean preemtive(Process process) {
+        return false;
+    }
     private boolean nonPreemptive(Process process) {
         Time startTime = new Time(currentTime);
-        if(executeNonPreemptive(process)){
+        if(executeProcess(process)){
             Time endTime = new Time((long) currentTime);
             process.addDuration(new Duration(startTime , endTime));
             isInterrupted = true;
@@ -75,14 +88,13 @@ public class AGScheduling extends Scheduling {
             return false;
         }
     }
-
-    private boolean executeNonPreemptive(Process process) {
+    private boolean executeProcess(Process process) {
         if(process.getQuantum().getKey() >= process.getRemainingTime()){
             currentTime += process.getRemainingTime();
             process.setRemainingTime(0);
             process.setQuantum(Map.entry(0,process.getQuantum().getValue()));
             deadList.add(process);
-            processes.remove(process);
+            readyQueue.remove(process);
             processesAG.remove(process);
             return true;
         }else{
@@ -91,12 +103,11 @@ public class AGScheduling extends Scheduling {
         }
     }
     private void remakeReadyQueue() {
-        while (!processes.isEmpty()) {
-            assert processes.getFirst() != null;
-            if (!(processes.getFirst().getArrivalTime() <= currentTime)) break;
-            Process topProcess = processes.getFirst();
+        while (!processes.isEmpty() && processes.get(0).getArrivalTime() <= currentTime) {
+            Process topProcess = processes.get(0);
             readyQueue.add(topProcess);
             processesAG.add(topProcess);
+            processes.remove(topProcess);
         }
     }
 }
